--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     this is a demo
     #add new button
-    <button> click </menu></button>
+    <button> click me </menu></button>
 
 </body>
 </html>
